<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary"
    tools:context="com.blooddonation.Main.Confirmation">


    <TextView
        android:id="@+id/ConfirmTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/Confirmation_Text"
        android:textColor="@color/Dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ConfirmTextId1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Confirmation_Text1"
        android:textColor="@color/Dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmTextId" />


    <RadioGroup
        android:id="@+id/RadioGroupId"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmTextId1">

        <RadioButton
            android:id="@+id/YesButtonId"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/yesDecesion"
            android:textColor="@color/Dark"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/NoButtonId"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            android:text="@string/noDecesion"
            android:textColor="@color/Dark"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/ConfirmButtonId"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/Dark"
        android:text="@string/go"
        android:textColor="@color/Primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupId"
        app:layout_constraintVertical_bias="0.063" />

</androidx.constraintlayout.widget.ConstraintLayout>



