<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary"
    tools:context=".WelcomeScreen">

    <TextView
        android:id="@+id/TitleTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/app_name"
        android:textColor="@color/Dark"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/TitleImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/TitleImage"
        android:layout_width="200dp"
        android:layout_height="175dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/BottomTitleView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextViewId"
        app:srcCompat="@drawable/welcome_screen" />

    <TextView
        android:id="@+id/BottomTitleView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bottom_Title1"
        android:textColor="@color/Dark"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/BottomTitleView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TitleImage" />

    <TextView
        android:id="@+id/BottomTitleView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="124dp"
        android:text="@string/Bottom_Title2"
        android:textColor="@color/Dark"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BottomTitleView1" />


</androidx.constraintlayout.widget.ConstraintLayout>